workspaces/DC Dev/DC Dev/src/objects/Model__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Holds the brand of the model.</description>
        <inlineHelpText>Select the brand of the model.</inlineHelpText>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Models</relationshipLabel>
        <relationshipName>Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name_of_Model__c</fullName>
        <description>Holds the name of the model.</description>
        <inlineHelpText>Provide the name of the model.</inlineHelpText>
        <label>Name of Model</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Holds the price of the model in dollars.</description>
        <inlineHelpText>Provide the price of the model in dollars.</inlineHelpText>
        <label>Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDL-{0000}</displayFormat>
        <label>Model Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>